RESOLVED FIXED47005
Null dereference when dragging an element with generated content
https://bugs.webkit.org/show_bug.cgi?id=47005
Summary Null dereference when dragging an element with generated content
mitz
Reported 2010-10-01 11:56:52 PDT
Attachments
Null-check node() (3.53 KB, patch)
2010-10-01 12:02 PDT, mitz
adele: review+
mitz
Comment 1 2010-10-01 12:02:23 PDT
Created attachment 69497 [details] Null-check node()
mitz
Comment 2 2010-10-01 12:16:56 PDT
WebKit Review Bot
Comment 3 2010-10-01 14:07:18 PDT
http://trac.webkit.org/changeset/68911 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.