<rdar://problem/7563219> Null dereference when dragging an element with generated content https://bugs.webkit.org/show_bug.cgi?id=47005

Reviewed by Adele Peterson.

WebCore:

Test: fast/css-generated-content/drag-state.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::updateDragState): Null-check node().

LayoutTests:

* fast/css-generated-content/drag-state-expected.txt: Added.
* fast/css-generated-content/drag-state.html: Added.



Canonical link: https://commits.webkit.org/59539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68911 268f45cc-cd09-0410-ab3c-d52691b4dbfc