WebCore/rendering/RenderObject.cpp
@@ -2224,7 +2224,7 @@ void RenderObject::updateDragState(bool dragOn)
 {
     bool valueChanged = (dragOn != m_isDragging);
     m_isDragging = dragOn;
-    if (valueChanged && style()->affectedByDragRules())
+    if (valueChanged && style()->affectedByDragRules() && node())
         node()->setNeedsStyleRecalc();
     for (RenderObject* curr = firstChild(); curr; curr = curr->nextSibling())
         curr->updateDragState(dragOn);
